--- a/three.css
+++ b/three.css
@@ -103,3 +103,10 @@ header {
     width: 340px;
     height: 532px;
 }
+.cost {
+    background: linear-gradient(144.63deg, rgba(199.83, 122.97, 198.55, 1),rgba(204.12, 105.09, 202.47, 1) 8%,rgba(207.6, 90.56, 205.65, 1) 14%,rgba(211.34, 74.92, 209.07, 1) 21%,rgba(215.63, 57.04, 212.99, 1) 29%,rgba(219.11, 42.51, 216.17, 1) 35%,rgba(223.13, 25.75, 219.84, 1) 42%,rgba(199.31, 29.12, 214.67, 1) 50%,rgba(167.1, 33.7, 207.68, 1) 62%,rgba(139.08, 37.67, 201.6, 1) 71%,rgba(102.66, 42.84, 193.7, 1) 84%,rgba(0, 5.58, 111.56, 1) 100%);
+    font-size: 25px;
+    border-radius: 20%;
+    width: 360px;
+    height: 30px;
+}
