--- a/pay2.css
+++ b/pay2.css
@@ -10,49 +10,43 @@ header {
     font-size: 19pt;
     text-align: center;
 }
-#about {
-   
-    border: 2px  solid;
-   border-radius: 5%
-}
-#tel {
-   border: 2px  solid;
-   border-radius: 5%;
-}
+
 .pay { 
-   border-radius: 5%;
-   width: 350px;
+  
+   width: 500px;
    font-size: 14pt;
-   color: rgb(255, 255, 255);
+   color: rgb(0, 0, 0);
    margin: 10px auto;
    background-position: center;
-   background-size: cover; 
+   background-size: cover;
+   background-color: rgb(61, 57, 57); 
+   height: 100vh;
 }
-#mail #telegram {
+#mail #telegram #tel {
     border: 2px  solid;
    border-radius: 5%;
+
 }
 #submit {
    border-radius: 5%;
-   background-color: rgb(0, 0, 0);
+
    text-align: center;
    font-size: 16pt;
-   
+   padding: 3px;
    padding: 3px;
 }   
 input {
    margin-bottom: 6px;
    margin-left: 7px;
    padding: 3px;
-}
-#submit {
-   padding: 3px;
+   border-radius: 20%;
 }
 main {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     padding-top: 30px;
+    box-sizing: content-box;
 }
 body {
     margin: 0;
