--- a/pay2.css
+++ b/pay2.css
@@ -8,8 +8,9 @@ header {
     height: 30px;
 
     font-size: 19pt;
-    text-align: center;
+    text-align: left;
 }
+
 
 .pay { 
   
@@ -19,12 +20,14 @@ header {
    margin: 10px auto;
    background-position: center;
    background-size: cover;
-   background-color: rgb(61, 57, 57); 
-   height: 100vh;
+   background: conic-gradient(from 7.31deg at 50% 50%, rgba(87, 15, 186, 1) 0deg, rgba(122, 0, 163, 1) 0deg, rgba(180, 160, 208, 1) 100.80000000000001deg, rgba(82, 20, 118, 1) 144deg, rgba(139, 97, 199, 1) 216deg, rgba(130, 83, 196, 1) 284.40000000000003deg, rgba(87, 15, 186, 1) 360deg, rgba(122, 0, 163, 1) 360deg);
+    justify-content: center;
+   height: 601PX;
 }
 #mail #telegram #tel {
     border: 2px  solid;
    border-radius: 5%;
+   justify-content: center;
 
 }
 #submit {
@@ -55,3 +58,22 @@ body {
     min-height: 100vh;
     background-attachment: fixed;
 }
+a {
+    color: rgb(255, 255, 255); 
+    text-decoration: none; 
+  }
+  
+  a:hover {
+    color: #ffffff; 
+    text-decoration: none;
+  }
+  
+  a:visited {
+    color: #ffffff; 
+    text-decoration: none;
+  }
+  
+  a:active {
+    color: #ffffff; 
+    text-decoration: none;
+  }
