--- a/three.css
+++ b/three.css
@@ -110,3 +110,24 @@ header {
     width: 360px;
     height: 30px;
 }
+a {
+    color: rgb(255, 255, 255); 
+    text-decoration: none; 
+  }
+  
+  a:hover {
+    color: #ffffff; 
+    text-decoration: none;
+  }
+  
+  a:visited {
+    color: #ffffff; 
+    text-decoration: none;
+  }
+  
+  a:active {
+    color: #ffffff; 
+    text-decoration: none;
+  }
+  
+  
